--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="hobbies">
           Моє хобі це зайняття спортом та раскумар з Леонтієм 😂
         </div>
-        <a href="/gallery.html" class="gallery"
+        <a href="gallery.html" class="gallery"
           >За цим поссиланням ви можете переглянути мою галерею!</a
         >
       </div>
